--- a/css/home.css
+++ b/css/home.css
@@ -288,7 +288,8 @@ div.dib{*display:inline; *zoom:1;}/* other block level tag(eg. p, li, h1~h6), us
 /* 大小不定元素垂直居中 */
 .dib_vm{display:inline-block; width:0; height:100%; vertical-align:middle;}
 /* 加载中背景图片 - 如果您使用该CSS小库，务必修改此图片地址 */
-.loading{background:url(about:blank) no-repeat center;}
+/*.loading{background:url(about:blank) no-repeat center;}*/
+.loading{background:url('https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/spirit_ground.jpg') fixed no-repeat center center;}
 /* 无框文本框文本域 */
 .bd_none{border:0; outline:none;}
 /* 绝对定位隐藏 */
@@ -361,14 +362,14 @@ body{font-size: 14px;font-family: '微软雅黑';background: url('../img/spirit_
 /*==============================泡泡特效样式============================*/
 /*=====================================================================*/
 /* Header */
-#large-header {
+/*.large-header {
 	position: relative;
 	width: 100%;
-	/*background: #333;*/
+	background: #333;
 	background: url('https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/spirit_ground.jpg') fixed no-repeat center center;
-	/*background: url('../img/spirit_ground.jpg') fixed no-repeat center center;*/
+	background: url('../img/spirit_ground1.jpg') fixed no-repeat center center;
 	overflow: hidden;
 	background-size: cover;
 	background-position: center center;
 	z-index: -100;
-}
+}*/
