--- a/css/time_line.css
+++ b/css/time_line.css
@@ -1,6 +1,6 @@
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
- abbr, acronym, address, big, cite, code,
+a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
@@ -288,8 +288,8 @@ div.dib{*display:inline; *zoom:1;}/* other block level tag(eg. p, li, h1~h6), us
 /* 大小不定元素垂直居中 */
 .dib_vm{display:inline-block; width:0; height:100%; vertical-align:middle;}
 /* 加载中背景图片 - 如果您使用该CSS小库，务必修改此图片地址 */
-.loading{background:url('https://rawcdn.githack.com/popzoo/zoo/7c486ebfa3f21eb5dc032ce5449c4a161d180619/img/spirit_ground.jpg') fixed repeat-y center center;}
-/*.loading{background:url('https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/spirit_ground.jpg') no-repeat 0% fixed; }*/
+/*.loading{background:url('https://rawcdn.githack.com/popzoo/zoo/7c486ebfa3f21eb5dc032ce5449c4a161d180619/img/spirit_ground.jpg') fixed repeat-y center center;}*/
+.loading{background:url('https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/spirit_ground.jpg') fixed repeat-y center center;}
 /* 无框文本框文本域 */
 .bd_none{border:0; outline:none;}
 /* 绝对定位隐藏 */
