--- a/css/time_line.css
+++ b/css/time_line.css
@@ -288,7 +288,6 @@ div.dib{*display:inline; *zoom:1;}/* other block level tag(eg. p, li, h1~h6), us
 /* 大小不定元素垂直居中 */
 .dib_vm{display:inline-block; width:0; height:100%; vertical-align:middle;}
 /* 加载中背景图片 - 如果您使用该CSS小库，务必修改此图片地址 */
-/*.loading{background:url('https://rawcdn.githack.com/popzoo/zoo/7c486ebfa3f21eb5dc032ce5449c4a161d180619/img/spirit_ground.jpg') fixed repeat-y center center;}*/
 .loading{background:url('https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/spirit_ground.jpg') no-repeat fixed;background-size:100% 100%;-moz-background-size:100% 100%;}
 /* 无框文本框文本域 */
 .bd_none{border:0; outline:none;}
@@ -315,6 +314,10 @@ body{font-size: 14px;font-family: '微软雅黑';background-color: mistyrose;hei
 .body{line-height: 40px;}
 .body .header{font-size: 30px;margin: 10px 0 20px;font-weight: 600;}
 .statcss {text-align: center;line-height: 28px; width: 700px; font-size: 16px;color:orange;background-color: rgba(53,53,53,0.7);border-radius: 5px;margin: 0 auto;margin-bottom: 10px;}
+.statcss a:link {color: orange;text-decoration: none;}
+.statcss a:visited {text-decoration: none;color: orange;}
+.statcss a:hover {text-decoration: none;color: orange;}
+.statcss a:active {text-decoration: none;color: orange;}
 .event_wrap{position:relative;}
 .event_wrap .middle_line{position:absolute;left:50%;top:0;width:8px;margin-left: -3px;border-left: 6px solid #000;height:100%;}
 .event_wrap .middle_line i{display:block;height:3.31%;border-bottom: 1px solid #000;width:60%;}
@@ -356,7 +359,6 @@ body{font-size: 14px;font-family: '微软雅黑';background-color: mistyrose;hei
 .ev_text p{font-size: 17px;color: goldenrod;line-height: 20px;padding-left:20%;width:80%;height:40px;overflow: hidden;}
 .list_right .ev_text_event h3,.list_right .ev_text_event p,.list_left .ev_text_odd h3,.list_left .ev_text_odd p{padding-right: 100px;padding-left: inherit;}
 
-#cnzz_stat_icon_1278032070 a:link{color:orange;}
 /*=====================================================================*/
 /*==============================泡泡特效样式============================*/
 /*=====================================================================*/
@@ -372,3 +374,4 @@ body{font-size: 14px;font-family: '微软雅黑';background-color: mistyrose;hei
 	background-position: center center;
 	z-index: -100;
 }*/
+
