--- a/css/time_line.css
+++ b/css/time_line.css
@@ -288,7 +288,7 @@ div.dib{*display:inline; *zoom:1;}/* other block level tag(eg. p, li, h1~h6), us
 /* 大小不定元素垂直居中 */
 .dib_vm{display:inline-block; width:0; height:100%; vertical-align:middle;}
 /* 加载中背景图片 - 如果您使用该CSS小库，务必修改此图片地址 */
-.loading{background:url('https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/spirit_ground.jpg') no-repeat fixed;background-size:100% 100%;-moz-background-size:100% 100%;}
+.loading{background:url('https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/spirit_ground.jpg') no-repeat fixed;background-size:100% 100%;-moz-background-size:100% 100%;}
 /* 无框文本框文本域 */
 .bd_none{border:0; outline:none;}
 /* 绝对定位隐藏 */
@@ -367,7 +367,7 @@ body{font-size: 14px;font-family: '微软雅黑';background-color: mistyrose;hei
 	position: relative;
 	width: 100%;
 	background: #333;
-	background: url('https://coding.net/u/lvlanxing/p/popzoo/git/raw/master/pics/spirit_ground.jpg') fixed no-repeat center center;
+	background: url('https://lvlanxing.coding.net/p/popzoo/d/popzoo/git/raw/master/pics/spirit_ground.jpg') fixed no-repeat center center;
 	background: url('../img/spirit_ground1.jpg') fixed no-repeat center center;
 	overflow: hidden;
 	background-size: cover;
