--- a/css/time_line.css
+++ b/css/time_line.css
@@ -260,7 +260,7 @@ div.dib{*display:inline; *zoom:1;}/* other block level tag(eg. p, li, h1~h6), us
 .vh{visibility:hidden;}
 .vv{visibility:visible;}
 /* opacity */
-.opa0{opacity:0; filer:alpha(opacity=0);}
+.opa0{opacity:0; filter:alpha(opacity=0);}
 /* zoom */
 .z{*zoom:1;}
 
@@ -288,14 +288,15 @@ div.dib{*display:inline; *zoom:1;}/* other block level tag(eg. p, li, h1~h6), us
 /* 大小不定元素垂直居中 */
 .dib_vm{display:inline-block; width:0; height:100%; vertical-align:middle;}
 /* 加载中背景图片 - 如果您使用该CSS小库，务必修改此图片地址 */
-.loading{background:url('https://cdn.jsdelivr.net/gh/popzoo/zoo/img/spirit_ground.jpg') no-repeat fixed;background-size:100% 100%;-moz-background-size:100% 100%;}
+.loading{background:url('https://popbob.ml/gh/popzoo/zoo/img/spirit_ground.jpg') no-repeat fixed;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;}
+	/* background-size:100% 100%;-moz-background-size:100% 100%; */
 /* 无框文本框文本域 */
 .bd_none{border:0; outline:none;}
 /* 绝对定位隐藏 */
 .abs_out{position:absolute; left:-999em; top:-999em;}
 .abs_clip{position:absolute; clip:rect(0 0 0 0);}
 /* 按钮禁用 */
-.disabled{outline:0 none; cursor:default!important; opacity:.4; filer:alpha(opacity=40); -ms-pointer-events:none; pointer-events:none;}
+.disabled{outline:0 none; cursor:default!important; opacity:.4; filter:alpha(opacity=40); -ms-pointer-events:none; pointer-events:none;}
 /*inline-block与float等宽列表*/
 .inline_box{font-size:1em; letter-spacing:-.25em; font-family:Arial;}
 .inline_two, .inline_three, .inline_four, .inline_five, .inline_six, .inline_any{display:inline-block; *display:inline; letter-spacing:0; vertical-align:top; *zoom:1;}
